@@ -3,19 +3,15 @@ package org.business;
 import org.shared.EventInfo;
 import org.shared.HotelEvent;
 
-import java.time.LocalDate;
 import java.util.*;
 import java.util.stream.Collectors;
 
 public class Datamart {
-
     private final Map<String, List<HotelEvent>> hotelesPorCiudad = new HashMap<>();
     private final List<EventInfo> eventos = new ArrayList<>();
 
     public synchronized void addEvent(HotelEvent event) {
-        hotelesPorCiudad
-                .computeIfAbsent(event.city, k -> new ArrayList<>())
-                .add(event);
+        hotelesPorCiudad.computeIfAbsent(event.city, k -> new ArrayList<>()).add(event);
     }
 
     public synchronized void addEvent(EventInfo event) {
@@ -26,58 +22,24 @@ public class Datamart {
         return eventos;
     }
 
-    public EventInfo findEventByName(String name) {
-        return eventos.stream()
-                .filter(e -> e.name.equalsIgnoreCase(name))
-                .findFirst()
-                .orElse(null);
-    }
-
-    public List<HotelEvent> getHotelsForEvent(
-            String eventName,
-            double maxPrice,
-            String category,          // LOW, MEDIUM, HIGH
-            double minRating,
-            double maxDistanceKm
-    ) {
-        EventInfo evento = findEventByName(eventName);
-        if (evento == null) {
-            System.out.println("⚠️ Evento no encontrado: " + eventName);
-            return List.of();
-        }
-
-        String city = evento.city;
-        LocalDate eventDate = LocalDate.parse(evento.date);
-
-        return hotelesPorCiudad.getOrDefault(city, Collections.emptyList())
+    public List<HotelEvent> getHotelesFiltrados(String ciudad, double eventoLat, double eventoLon,
+                                                double maxPrecio, String categoria, double minRating, double maxDistKm) {
+        return hotelesPorCiudad.getOrDefault(ciudad, Collections.emptyList())
                 .stream()
-                .filter(h -> h.ts != null && h.ts.atZone(java.time.ZoneId.systemDefault()).toLocalDate().equals(eventDate))
-                .filter(h -> h.minPrice <= maxPrice)
-                .filter(h -> category == null || h.category.equalsIgnoreCase(category))
+                .filter(h -> h.minPrice <= maxPrecio)
+                .filter(h -> categoria == null || h.category.equalsIgnoreCase(categoria))
                 .filter(h -> h.rating >= minRating)
-                .filter(h -> {
-                    if (evento.lat == 0 || evento.lon == 0) return true;
-                    double distance = distanceKm(h.lat, h.lon, evento.lat, evento.lon);
-                    return distance <= maxDistanceKm;
-                })
+                .filter(h -> calcularDistanciaKm(eventoLat, eventoLon, h.lat, h.lon) <= maxDistKm)
                 .collect(Collectors.toList());
     }
 
-    // Distancia entre dos coordenadas con la fórmula de Haversine
-    private double distanceKm(double lat1, double lon1, double lat2, double lon2) {
-        final int R = 6371; // Radio de la Tierra en km
-
-        double latRad1 = Math.toRadians(lat1);
-        double latRad2 = Math.toRadians(lat2);
-        double deltaLat = Math.toRadians(lat2 - lat1);
-        double deltaLon = Math.toRadians(lon2 - lon1);
-
-        double a = Math.sin(deltaLat / 2) * Math.sin(deltaLat / 2)
-                   + Math.cos(latRad1) * Math.cos(latRad2)
-                     * Math.sin(deltaLon / 2) * Math.sin(deltaLon / 2);
-
-        double c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
-
-        return R * c;
+    private double calcularDistanciaKm(double lat1, double lon1, double lat2, double lon2) {
+        double R = 6371; // Radio de la Tierra en km
+        double dLat = Math.toRadians(lat2 - lat1);
+        double dLon = Math.toRadians(lon2 - lon1);
+        double a = Math.sin(dLat/2) * Math.sin(dLat/2)
+                + Math.cos(Math.toRadians(lat1)) * Math.cos(Math.toRadians(lat2))
+                * Math.sin(dLon/2) * Math.sin(dLon/2);
+        return R * 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1-a));
     }
 }
